# BasedBean

./: README.md
application/backend/keg/: .gitignore  Dockerfile  README.md  flake.nix  go.mod  go.sum  main.go
application/backend/keg/src/: app.go
application/backend/keg/src/app/: api.go  app.go  json.go  server_error.go
application/backend/keg/src/cache/: key_cache.go  key_cache_test.go
application/backend/keg/src/db/: db.go  key_utils.go  key_utils_test.go  lock.go  storage.go
application/backend/keg/src/env/: env.go
application/backend/server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
application/backend/server/src/: main.rs
application/backend/server/src/app/: state.rs
application/backend/server/src/authorization/: login.rs  mod.rs  register.rs
application/backend/server/src/common/: error.rs  mod.rs  models.rs  session.rs
application/backend/server/src/database/: handler.rs  mod.rs
application/backend/server/src/paste/: expiry.rs  key.rs  manager.rs  mod.rs  user.rs
application/frontend/: Dockerfile  flake.nix
application/frontend/webpage/: .env.example  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
application/frontend/webpage/src/: App.tsx  index.css  vite-env.d.ts
kubernetes/: README.md  frontend.yaml  keg.yaml  keydb.yaml  mongodb-ha.yaml  mongodb.yaml  server.yaml  setUpCluster.sh
tools/keg/: cli.sh  compose.sh  curl.sh  docker-compose.yaml  insert-keys.sh
tools/mongo/: docker-compose.yaml
(+19 files in other folders)
