[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
awc = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = { version = "0.4.21", features = ["std"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
argon2 = "0.5.3"
rand = "0.8.5"
